Conversion from Java 16 to Java 8.