@@ -23,6 +23,7 @@
 package io.github.jwdeveloper.tiktok.handlers.events;
 
 import io.github.jwdeveloper.tiktok.TikTokRoomInfo;
+import io.github.jwdeveloper.tiktok.data.events.common.TikTokEvent;
 import io.github.jwdeveloper.tiktok.data.events.gift.TikTokGiftComboEvent;
 import io.github.jwdeveloper.tiktok.data.events.gift.TikTokGiftEvent;
 import io.github.jwdeveloper.tiktok.data.models.Picture;
@@ -39,6 +40,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 
+import java.util.Collections;
 import java.util.List;
 
 
@@ -49,8 +51,8 @@ class TikTokGiftEventHandlerTest {
 
     @BeforeAll
     public void before() {
-        var manager = new TikTokGiftsManager(List.of());
-        var info = new TikTokRoomInfo();
+        TikTokGiftsManager manager = new TikTokGiftsManager(Collections.emptyList());
+        TikTokRoomInfo info = new TikTokRoomInfo();
         info.setHost(new io.github.jwdeveloper.tiktok.data.models.users.User(123L, "test", new Picture("")));
         manager.attachGift(new Gift(123, "example", 123, "image.webp"));
         handler = new TikTokGiftEventHandler(manager, info);
@@ -58,45 +60,45 @@ class TikTokGiftEventHandlerTest {
 
     @Test
     void shouldHandleGifts() {
-        var message = getGiftMessage("example-new-name", 123, "image-new.png", 0, 1, false);
-        var result = handler.handleGift(message);
+        WebcastGiftMessage message = getGiftMessage("example-new-name", 123, "image-new.png", 0, 1, false);
+        List<TikTokEvent> result = handler.handleGift(message);
 
         Assertions.assertEquals(2, result.size());
 
-        var event = (TikTokGiftEvent) result.get(0);
-        var gift = event.getGift();
+        TikTokGiftEvent event = (TikTokGiftEvent) result.get(0);
+        Gift gift = event.getGift();
         Assertions.assertEquals("image-new.png", gift.getPicture().getLink());
         Assertions.assertEquals(123, gift.getId());
     }
 
     @Test
     void shouldHandleStrakableGift() {
-        var message = getGiftMessage("example-new-name", 123, "image-new.png", 0, 1, true);
-        var result = handler.handleGift(message);
+        WebcastGiftMessage message = getGiftMessage("example-new-name", 123, "image-new.png", 0, 1, true);
+        List<TikTokEvent> result = handler.handleGift(message);
 
         Assertions.assertEquals(1, result.size());
 
-        var event = (TikTokGiftEvent) result.get(0);
-        var gift = event.getGift();
+        TikTokGiftEvent event = (TikTokGiftEvent) result.get(0);
+        Gift gift = event.getGift();
         Assertions.assertEquals("image-new.png", gift.getPicture().getLink());
         Assertions.assertEquals(123, gift.getId());
     }
 
     @Test
     void shouldHandleStrike() {
-        var message1 = getGiftMessage("example-new-name", 123, "image-new.png", 1, 1, true);
-        var message2 = getGiftMessage("example-new-name", 123, "image-new.png", 2, 1, true);
-        var message3 = getGiftMessage("example-new-name", 123, "image-new.png", 0, 1, true);
+        WebcastGiftMessage message1 = getGiftMessage("example-new-name", 123, "image-new.png", 1, 1, true);
+        WebcastGiftMessage message2 = getGiftMessage("example-new-name", 123, "image-new.png", 2, 1, true);
+        WebcastGiftMessage message3 = getGiftMessage("example-new-name", 123, "image-new.png", 0, 1, true);
 
-        var result1 = handler.handleGift(message1);
-        var result2 = handler.handleGift(message2);
-        var result3 = handler.handleGift(message3);
+        List<TikTokEvent> result1 = handler.handleGift(message1);
+        List<TikTokEvent> result2 = handler.handleGift(message2);
+        List<TikTokEvent> result3 = handler.handleGift(message3);
 
-        var event1 = (TikTokGiftComboEvent) result1.get(0);
-        var event2 = (TikTokGiftComboEvent) result2.get(0);
+        TikTokGiftComboEvent event1 = (TikTokGiftComboEvent) result1.get(0);
+        TikTokGiftComboEvent event2 = (TikTokGiftComboEvent) result2.get(0);
 
         Assertions.assertEquals(2, result3.size());
-        var event3 = (TikTokGiftComboEvent) result3.get(0);
+        TikTokGiftComboEvent event3 = (TikTokGiftComboEvent) result3.get(0);
 
         Assertions.assertEquals(GiftComboStateType.Begin, event1.getComboState());
         Assertions.assertEquals(GiftComboStateType.Active, event2.getComboState());
@@ -110,9 +112,9 @@ class TikTokGiftEventHandlerTest {
                                              int sendType,
                                              int userId,
                                              boolean streakable) {
-        var builder = WebcastGiftMessage.newBuilder();
-        var giftBuilder = GiftStruct.newBuilder();
-        var userBuilder = User.newBuilder();
+        WebcastGiftMessage.Builder builder = WebcastGiftMessage.newBuilder();
+        GiftStruct.Builder giftBuilder = GiftStruct.newBuilder();
+        User.Builder userBuilder = User.newBuilder();
 
 
         giftBuilder.setId(giftId);
