@@ -1,3 +1,25 @@
+/*
+ * Copyright (c) 2023-2023 jwdeveloper jacekwoln@gmail.com
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining
+ * a copy of this software and associated documentation files (the
+ * "Software"), to deal in the Software without restriction, including
+ * without limitation the rights to use, copy, modify, merge, publish,
+ * distribute, sublicense, and/or sell copies of the Software, and to
+ * permit persons to whom the Software is furnished to do so, subject to
+ * the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be
+ * included in all copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+ * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+ * LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+ * OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+ * WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ */
 package io.github.jwdeveloper.tiktok.extension.collector.impl.storages;
 
 import io.github.jwdeveloper.tiktok.extension.collector.api.Storage;
@@ -7,6 +29,7 @@ import org.bson.json.JsonWriterSettings;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 
@@ -30,11 +53,15 @@ public class FileStorage implements Storage {
 
     @Override
     public void insert(Document document) {
-        var fileName = document.get("dataType") + "_" + document.get("dataTypeName") + ".json";
+        String fileName = document.get("dataType") + "_" + document.get("dataTypeName") + ".json";
         try {
-            var file = new File(settings.getParentFile(), fileName);
+            File file = new File(settings.getParentFile(), fileName);
             file.createNewFile();
-            Files.writeString(file.toPath(), document.toJson(JsonWriterSettings.builder().indent(true).build()), StandardOpenOption.APPEND);
+            Files.write(
+                    file.toPath(),
+                    document.toJson(JsonWriterSettings.builder().indent(true).build()).getBytes(StandardCharsets.UTF_8),
+                    StandardOpenOption.APPEND
+            );
         } catch (IOException e) {
             e.printStackTrace();
         }
